<?xml version="1.0" encoding="UTF-8" ?>
<resources>
    <string name="app_name">YING CHUAN</string>
    <string name="toolbar_title_1">Member List</string>
    <string name="toolbar_title_2">Member Registration</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_token">Enter Token</string>
    <string name="prompt_qq">Enter QQ</string>
    <string name="prompt_set_qq">Set QQ</string>
    <string name="prompt_password">Enter Password</string>
    <string name="prompt_set_password">Set Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_refresh_qrcode">Generate new code</string>
    <string name="action_reg">Register</string>
    <string name="action_verify">Verify</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid QQ</string>
    <string name="invalid_password">Password must be greater than 5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="quit">Quit</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="setting">Option</string>
    <string name="about">About</string>
    <string name="system">System</string>
    <string name="toolbar_menu_change_to_reg">Switch to Member Registration</string>
    <string name="toolbar_menu_change_to_list">Switch to Member List</string>
    <string name="toolbar_menu_search">Search</string>
    <string name="toolbar_menu_tips">Tips</string>
    <string name="submitted">YES</string>
    <string name="not_submitted">NOT</string>
    <string name="set_submitted">Set to Submitted</string>
    <string name="set_not_submitted">"Set to Not Submitted"</string>
    <string name="update_qq">Modify Member QQ</string>
    <string name="view_details">View Details</string>
    <string name="member_info">Member Info</string>
    <string name="edit_qq">Enter New QQ</string>
    <string name="delete_member">Delete Member</string>
    <string name="search_hint">Enter Keywords</string>
    <string name="debug">DEBUG</string>
    <string name="millisecond">Millisecond</string>
    <string name="second">Second</string>
    <string name="update_log">Update Log：</string>
    <string name="debug_log">Debug Logs：</string>
    <string name="qrcode_tips">1. Any QR code scanning tool can scan QR code registration, including QQ (not recommended)/WeChat/Alipay/browser, etc., without restricting the platform. \n2. Click on the QR code to copy the corresponding link, send it to the other party through social to open it can also be registered. \n3. The generated QR code can only register one member, multiple members need to generate multiple times, and the QR code expires immediately after submitting the registration.</string>
    <string name="qq_not_installed">QQ is not installed</string>
    <string name="no_more">No more refreshing!</string>
    <string name="latest_now">The current version is the latest</string>
    <string name="no_new">No new version detected</string>
    <string name="new_release">Discover the new release</string>
    <string name="enter_qq_please">Please enter QQ</string>
    <string name="enter_psw_please">Please enter Password</string>
    <string name="delete_failed">Failed to delete</string>
    <string name="delete_successful">Deleted successfully</string>
    <string name="modified_failure">Failed to modify</string>
    <string name="modified_successful">Modified successfully</string>
    <string name="loading">Loading</string>
    <string name="request_failed">Request failed</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="unknown_error">Unknown error</string>
    <string name="restart_please">There is an error in the software, please close and restart the software</string>
    <string name="download_start">Start Downloading</string>
    <string name="download_failed">Download failed</string>
    <string name="download_successful">Download successful</string>
    <string name="click_to_open">Click to open</string>
    <string name="download_member_excel">Download Member\'s Excel</string>
    <string name="rw_permissions">Please grant read and write permissions</string>

    <string name="update_logs">--1.1.0\n1.Add the function of exporting member information\n2.Fix some bugs, improve stability\n\n--1.0.4_Beta\n1.Add logout login option\n2.Improve stability\n\n--1.0.3_Alpha\n1.Improve stability\n\n--1.0.2_Alpha\n1.Fix bug in update link\n2.Modify new student page prompt\n3.Remove unnecessary permissions\n4.Improve stability\n\n--1.0. 1_Alpha\n1.Add new student registration page prompt\n\n--1.0.0_Alpha\n1.More \'Delete Member\' option than the previous version before the reset\n2.More search function for members than the previous version before the reset\n\n</string>

</resources>
