<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:text="@string/title_activity_login"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/usertoken"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_login_edittext"
            android:hint="@string/prompt_token"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:selectAllOnFocus="true"
            android:textColor="#0091EA"
            android:textSize="20sp" />

        <Button
            android:id="@+id/usertoken_x"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_close"
            android:visibility="invisible" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_login_edittext"
            android:hint="@string/prompt_qq"
            android:inputType="number"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:selectAllOnFocus="true"
            android:textColor="#0091EA"
            android:textSize="20sp" />

        <Button
            android:id="@+id/username_x"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_close"
            android:visibility="invisible" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_login_edittext"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:selectAllOnFocus="true"
            android:textColor="#0091EA"
            android:textSize="20sp" />

        <Button
            android:id="@+id/password_x"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_close"
            android:visibility="invisible" />

    </RelativeLayout>

    <com.lihang.ShadowLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        app:hl_cornerRadius="12dp"
        app:hl_layoutBackground="#0097FE"
        app:hl_layoutBackground_true="#1A689E"
        app:hl_shapeMode="ripple">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login_button"
            android:enabled="true"
            android:text="@string/action_sign_in"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </com.lihang.ShadowLayout>

    <TextView
        android:id="@+id/test_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>