<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.lihang.ShadowLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        app:hl_cornerRadius="12dp">

        <LinearLayout
            android:id="@+id/pop_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EEEEEE"
            android:orientation="vertical">

            <com.lihang.ShadowLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                app:hl_layoutBackground="#FFF"
                app:hl_layoutBackground_true="#BBB"
                app:hl_shapeMode="ripple">

                <Button
                    android:id="@+id/btn_change_submit"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_button_list"
                    android:text="@string/set_submitted"
                    android:textStyle="bold" />
            </com.lihang.ShadowLayout>

            <com.lihang.ShadowLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                app:hl_layoutBackground="#FFF"
                app:hl_layoutBackground_true="#BBB"
                app:hl_shapeMode="ripple">

                <Button
                    android:id="@+id/btn_update_qq"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_button_list"
                    android:text="@string/update_qq"
                    android:textStyle="bold" />
            </com.lihang.ShadowLayout>

            <com.lihang.ShadowLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                app:hl_layoutBackground="#FFF"
                app:hl_layoutBackground_true="#BBB"
                app:hl_shapeMode="ripple">

                <Button
                    android:id="@+id/btn_view_details"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_button_list"
                    android:text="@string/view_details"
                    android:textStyle="bold" />
            </com.lihang.ShadowLayout>

            <com.lihang.ShadowLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:hl_layoutBackground="#FFF"
                app:hl_layoutBackground_true="#BBB"
                app:hl_shapeMode="ripple">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_button_list"
                    android:text="@string/cancel"
                    android:textStyle="bold" />
            </com.lihang.ShadowLayout>
        </LinearLayout>
    </com.lihang.ShadowLayout>
</RelativeLayout>